# rankings_remix

./: README.md  Remixed Rankings with Tables.xlsx  pyproject.toml
rankings/: remix.py
tests/: test_rankings.py
