[tool.poetry]
name = "rankings_remix"
version = "0.1.0"
description = ""
authors = ["corey rayburn yung <coreyrayburnyung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
numpy = "^1.20.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
